--- a/página.html
+++ b/página.html
@@ -1,33 +1,34 @@
 <head>
     <meta charset="utf-8"/>
     <title>Mis gustos</title>
+    <link href="estilo.css" rel="stylesheet"/>
 </head>
 <body>
     <header>
-        <h2>Mis gustos</h2>
-        <h4>Rosario Melero</h4>
+        <h2 id="titulazo">Mis gustos</h2>
+        <h4 id="nombre">Rosario Melero</h4>
         <nav>
             <ul>
-                <li><a target="blank" href="https://www.youtube.com/user/patriciapink4u">bailar</a></li>
-                <li><a target="blank" href="https://www.instagram.com/rmc_draws/">dibujar</a></li>
-                <li><a target="_blank" href="https://www3.animeflv.net/">anime</a></li>
+                <li class="lista"><a target="blank" href="https://www.youtube.com/user/patriciapink4u">bailar</a></li>
+                <li class="lista"><a target="blank" href="https://www.instagram.com/rmc_draws/">dibujar</a></li>
+                <li class="lista"><a target="_blank" href="https://www3.animeflv.net/">anime</a></li>
             </ul>
         </nav>
     </header>
-    <div>A continuación hablaré un poco de algunas de mis cosas favoritas en la vida.</div>
-    <div>
-        <h5>Bailar</h5>
-        <p>Bailo desde tercero básico cuando la profesora de educación física me invitó al grupo folclórico. Seguí ahí durante toda mi vida escolar hasta llegar a ser la responsable de varios bailes. En 2016 ingresé a la academia <em>Power Peralta</em> y formé parte de un grupo de <em>dance cover</em> un tiempo. Hoy sigo bailando con el grupo <em>DancING UC</em>.</p>
-        <img src="Imágenes/baile.jpg" width="400">
+    <div id="subtitulo">A continuación hablaré un poco de algunas de mis cosas favoritas en la vida.</div>
+    <div id="bailar" class="div">
+        <h5 class="titulo">Bailar</h5>
+        <p class="texto">Bailo desde tercero básico cuando la profesora de educación física me invitó al grupo folclórico. Seguí ahí durante toda mi vida escolar hasta llegar a ser la responsable de varios bailes. En 2016 ingresé a la academia <em>Power Peralta</em> y formé parte de un grupo de <em>dance cover</em> un tiempo. Hoy sigo bailando con el grupo <em>DancING UC</em>.</p>
+        <img id="im1" class="im" src="Imágenes/baile.jpg" width="300">
     </div>
-    <div>
-        <h5>Dibujar</h5>
-        <p>Dibujo desde que tengo memoria. Siempre he llenado las páginas vacías de todos mis cuadernos y dibujado detrás de mis pruebas al terminarlas. Es algo que siempre ha estado ahí. Finalmente el año pasado me hice una cuenta de <em>Instagram</em> para ir subiendo mis dibujos.</p>
-        <img src="Imágenes/Fantasma.jpg" width="400">
+    <div id="dibujar" class="div">
+        <h5 class="titulo">Dibujar</h5>
+        <p class="texto">Dibujo desde que tengo memoria. Siempre he llenado las páginas vacías de todos mis cuadernos y dibujado detrás de mis pruebas al terminarlas. Es algo que siempre ha estado ahí. Finalmente el año pasado me hice una cuenta de <em>Instagram</em> para ir subiendo mis dibujos.</p>
+        <img id="im2" class="im" src="Imágenes/Fantasma.jpg" width="300">
     </div>
-    <div>
-        <h5>Anime</h5>
-        <p>Yo de chica no veía mucho anime pero de vez en cuando veía algún capítulo de <em>Inuyasha</em> o <em >Detective Conan</em> cuando me lo topaba en la tele. Creo que fué el 2012 cuando empecé a ver <em>Naruto Shippuden</em> por recomendación de mis hermanos y ahí empezó todo. Después empecé a ver más animes como <em>Death note</em> o <em>Mirai nikki</em> y actualmente llevo 43 animes vistos. Mis favoritos de toda la vida son <em>Naruto Shippuden</em> y <em>Shingeki no kyojin</em>.</p>
-        <img src="Imágenes/Naruto icons »🍜 - ¡Itachi! ♡.jpg" width="400">
+    <div id="anime" class="div">
+        <h5 class=titulo>Anime</h5>
+        <p class="texto">Yo de chica no veía mucho anime pero de vez en cuando veía algún capítulo de <em>Inuyasha</em> o <em >Detective Conan</em> cuando me lo topaba en la tele. Creo que fué el 2012 cuando empecé a ver <em>Naruto Shippuden</em> por recomendación de mis hermanos y ahí empezó todo. Después empecé a ver más animes como <em>Death note</em> o <em>Mirai nikki</em> y actualmente llevo 43 animes vistos. Mis favoritos de toda la vida son <em>Naruto Shippuden</em> y <em>Shingeki no kyojin</em>.</p>
+        <img id="im3" class="im" src="Imágenes/Naruto icons »🍜 - ¡Itachi! ♡.jpg" width="300">
     </div>
 </body>
