--- a/página.html
+++ b/página.html
@@ -2,6 +2,8 @@
     <meta charset="utf-8"/>
     <title>Mis gustos</title>
     <link href="estilo.css" rel="stylesheet"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="text/javascript" src="aplicacion.js"></script>
 </head>
 <body>
     <header>
@@ -27,8 +29,11 @@
         <img id="im2" class="im" src="Imágenes/Fantasma.jpg" width="300">
     </div>
     <div id="anime" class="div">
-        <h5 class=titulo>Anime</h5>
+        <h5 class=titulo id="titulito">Anime</h5>
         <p class="texto">Yo de chica no veía mucho anime pero de vez en cuando veía algún capítulo de <em>Inuyasha</em> o <em >Detective Conan</em> cuando me lo topaba en la tele. Creo que fué el 2012 cuando empecé a ver <em>Naruto Shippuden</em> por recomendación de mis hermanos y ahí empezó todo. Después empecé a ver más animes como <em>Death note</em> o <em>Mirai nikki</em> y actualmente llevo 43 animes vistos. Mis favoritos de toda la vida son <em>Naruto Shippuden</em> y <em>Shingeki no kyojin</em>.</p>
         <img id="im3" class="im" src="Imágenes/Naruto icons »🍜 - ¡Itachi! ♡.jpg" width="300">
     </div>
+    <button id="boton">Saca el nombre del header</button>
+    <button id="boton3">Mostrar nombre en header</button>
+    <button id="otroboton">Cambiar título</button>
 </body>
